--- a/App/Final_Screen/finalscreen.kv
+++ b/App/Final_Screen/finalscreen.kv
@@ -3,7 +3,7 @@
 
     MDFloatLayout:
         Image:
-            source: "Graphics/background.jpg" 
+            source: "Graphics/background.png" 
             allow_stretch: True
             keep_ratio: False
 
