--- a/App/Main_Screen/mainscreen.kv
+++ b/App/Main_Screen/mainscreen.kv
@@ -3,7 +3,7 @@
 
     MDFloatLayout:
         Image:
-            source: "Graphics/background.jpg" 
+            source: "Graphics/background.png" 
             allow_stretch: True
             keep_ratio: False
 
